<resources>
    <string name="app_name">Mes Moutons</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Paramètres</string>
    <string name="action_search">Recherche</string>
    <string name="action_edit">Modifier</string>
    <string name="action_delete">Supprimer</string>

    <string name="menu_home">Mes Moutons</string>
    <string name="menu_sold">Moutons vendus</string>
    <string name="menu_dead">Moutons morts</string>
    <string name="menu_tools">Outils</string>
    <string name="menu_share">Partager</string>
    <string name="menu_send">Envoyer</string>
    <string name="title_add_sheep_activity">Ajouter un mouton</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="birthDay">Date Naissance</string>
    <string name="mother">Mère</string>
    <string name="number">Numéro</string>
    <string name="ram">Bélier</string>
    <string name="ewe">Brebis</string>
    <string name="lamb">Agneau</string>
    <string name="male">Mâle</string>
    <string name="female">Femelle</string>
    <string name="vendor">Vendeur</string>
    <string name="price">Prix</string>
    <string name="buyDate">Date Achat</string>
    <string name="validate">Valider</string>
    <string name="clearDate">Effacer</string>
</resources>
