<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_present_sheep"
            android:icon="@drawable/ic_baseline_android_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_sold_sheep"
            android:icon="@drawable/ic_baseline_euro_24"
            android:title="@string/menu_sold" />
        <item
            android:id="@+id/nav_dead_sheep"
            android:icon="@drawable/ic_baseline_android_24_reversed"
            android:title="@string/menu_dead" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
